perf: implement shallow cache optimizations, 2h pre-market warm-up, and market-partitioned historical storage